@@ -1,4 +1,5 @@
 3.0.25:
+ * Remove hard-coded SSL cipher suites and protocols by back-porting CASSANDRA-10508 (CASSANDRA-14893)
  * Adding columns via ALTER TABLE can generate corrupt sstables (CASSANDRA-16735)
  * Add flag to disable ALTER...DROP COMPACT STORAGE statements (CASSANDRA-16733)
  * Clean transaction log leftovers at the beginning of sstablelevelreset and sstableofflinerelevel (CASSANDRA-12519)
